[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Dungeon_Tileset.png" type="Texture" id=1]
[ext_resource path="res://TileMap.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
0/name = "Wall_Tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 128 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "Dungeon_Tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 224, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "Dungeon_Tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "Dungeon_Tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 320, 256, 160, 256 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 32, 32 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00784314, 0.643137, 0.768627, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00524902, 0.561916, 0.671875, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 2, 131073, 0, 65536, 131074, 3, 262144, 131075, 3, 262144, 131076, 3, 262144, 131077, 3, 262144, 131078, 3, 262144, 131079, 3, 262144, 131080, 3, 262144, 131081, 3, 262144, 131082, 3, 65537, 131083, 3, 131075, 131084, 3, 65539, 131085, 0, 65538, 196609, 0, 65536, 196610, 3, 262144, 196611, 3, 262144, 196612, 3, 262144, 196613, 3, 262144, 196614, 3, 262144, 196615, 3, 262144, 196616, 3, 262144, 196617, 3, 131072, 196618, 3, 131075, 196619, 3, 4, 196620, 3, 131075, 196621, 0, 65538, 262145, 0, 65536, 262146, 3, 262144, 262147, 3, 262144, 262148, 3, 262144, 262149, 3, 262144, 262150, 3, 262144, 262151, 3, 262144, 262152, 3, 262144, 262153, 3, 131072, 262154, 3, 131075, 262155, 3, 131075, 262156, 3, 131075, 262157, 0, 65538, 327681, 0, 65536, 327682, 3, 262144, 327683, 3, 262144, 327684, 3, 262144, 327685, 3, 262144, 327686, 3, 262144, 327687, 3, 262144, 327688, 3, 262144, 327689, 3, 262144, 327690, 3, 196609, 327691, 3, 196610, 327692, 3, 196611, 327693, 0, 65538, 393217, 0, 65536, 393218, 3, 262144, 393219, 3, 262144, 393220, 3, 262144, 393221, 3, 262144, 393222, 3, 262144, 393223, 3, 262144, 393224, 3, 262144, 393225, 3, 262144, 393226, 3, 131072, 393227, 3, 196610, 393228, 3, 131076, 393229, 0, 65538, 524269, 1, 0, 458753, 0, 65536, 458754, 3, 262144, 458755, 3, 262144, 458756, 3, 262144, 458757, 3, 262144, 458758, 3, 262144, 458759, 3, 262144, 458760, 3, 262144, 458761, 3, 262144, 458762, 3, 131072, 458763, 3, 196610, 458764, 3, 131076, 458765, 0, 65538, 589806, 1, 0, 589807, 1, 0, 524289, 0, 65536, 524290, 3, 262144, 524291, 3, 262144, 524292, 3, 262144, 524293, 3, 262144, 524294, 3, 262144, 524295, 3, 262144, 524296, 3, 262144, 524297, 3, 262144, 524298, 3, 131072, 524299, 3, 196610, 524300, 3, 131076, 524301, 0, 65538, 589825, 0, 65536, 589826, 3, 262144, 589827, 3, 262144, 589828, 3, 262144, 589829, 3, 262144, 589830, 3, 262144, 589831, 3, 262144, 589832, 3, 262144, 589833, 3, 262144, 589834, 3, 131072, 589835, 3, 196610, 589836, 3, 131076, 589837, 0, 65538, 655361, 0, 65536, 655362, 3, 262144, 655363, 3, 262144, 655364, 3, 262144, 655365, 3, 262144, 655366, 3, 262144, 655367, 3, 262144, 655368, 3, 262144, 655369, 3, 262144, 655370, 3, 131072, 655371, 3, 196610, 655372, 3, 131076, 655373, 0, 65538, 720897, 0, 131072, 720898, 0, 14, 720899, 0, 14, 720900, 0, 14, 720901, 0, 14, 720902, 0, 14, 720903, 0, 14, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 3, 131075, 720908, 0, 131073, 720909, 0, 262145, 786433, 0, 196608, 786434, 0, 196609, 786435, 0, 196609, 786436, 0, 196609, 786437, 0, 196609, 786438, 0, 196609, 786439, 0, 196609, 786440, 0, 196609, 786441, 0, 196609, 786442, 0, 196609, 786443, 3, 262146, 786444, 0, 196609, 786445, 0, 196610, 786446, 0, 15, 786447, 0, 15, 851979, 3, 393218 )
script = ExtResource( 2 )

[node name="LogContainer" type="PanelContainer" parent="."]
margin_left = 462.0
margin_top = 32.0
margin_right = 789.0
margin_bottom = 454.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LogLabel" type="RichTextLabel" parent="LogContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 320.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "DÃ©but de partie !!
"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandPanel" type="Panel" parent="."]
margin_left = 22.0
margin_top = 476.0
margin_right = 413.0
margin_bottom = 577.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="."]
margin_left = 403.348
margin_top = 505.694
margin_right = 484.348
margin_bottom = 545.694
text = "Fin de tour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBox" type="HBoxContainer" parent="."]
margin_left = 586.0
margin_top = 470.0
margin_right = 1000.0
margin_bottom = 583.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 17.0
margin_top = 454.0
margin_right = 292.0
margin_bottom = 494.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -3.0
margin_bottom = -1.0
size_flags_horizontal = 0
size_flags_vertical = 0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
